--- a/index.html
+++ b/index.html
@@ -232,42 +232,25 @@
           </div>
         </div>
       </section>
-
       <section
         class="gallery flex justify-center"
         aria-label="pre-wedding-trocadero"
       >
-        <div class="flex max-w-screen-lg">
-          <div class="w-1/2 overflow-hidden">
-            <img
-              src="assets/img/testing/LK_01505.jpg"
-              alt=""
-              class="transition-transform duration-500 ease-in-out hover:scale-150"
-            />
+        <div class="flex max-w-screen-lg w-full p-4">
+          <div class="relative w-full pb-[56.25%]">
+            <iframe
+              class="absolute top-0 left-0 w-full h-full"
+              src="https://www.youtube.com/embed/PIqi4CtOxFE"
+              frameborder="0"
+              allowfullscreen
+            ></iframe>
           </div>
-
-          <article class="w-1/2 flex items-center justify-center">
-            <div class="text-center px-12">
-              <p class="text-8xl mb-2 font-wedding-signature">
-                A Morning at Trocadéro
-              </p>
-              <time
-                datetime="2025-07-01"
-                class="block text-sm text-gray-500 mb-4"
-                >03/04/2025</time
-              >
-              <p class="text-base text-justify text-gray-700">
-                Early morning at Trocadéro. Clean light, open space, and the
-                city still half-asleep. Paris at its calmest.
-              </p>
-            </div>
-          </article>
         </div>
       </section>
     </main>
 
     <footer id="contact" class="text-center py-8 bg-[#413632] text-white">
-      <p class="mb-5 text-lg">Let’s collaborate and create something great!</p>
+      <p class="mb-5 text-lg">Thank you for watching!</p>
       <a
         href="mailto:lienkt0110@gmail.com"
         class="inline-block bg-white text-gray-800 px-5 py-2 rounded-md text-base no-underline"
