--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@
               <a
                 href="#bdwedding"
                 class="text-black no-underline font-medium text-base"
-                >BD-Wedding</a
+                >Engagement</a
               >
             </li>
             <li>
               <a
                 href="#qnwedding"
                 class="text-black no-underline font-medium text-base"
-                >QN-Wedding</a
+                >Wedding</a
               >
             </li>
           </ul>
@@ -241,6 +241,80 @@
             <iframe
               class="absolute top-0 left-0 w-full h-full"
               src="https://www.youtube.com/embed/PIqi4CtOxFE"
+              frameborder="0"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+      </section>
+      <section
+        class="gallery flex justify-center"
+        aria-label="pre-wedding-trocadero"
+      >
+        <div class="flex max-w-screen-lg w-full p-4">
+          <div class="relative w-full pb-[56.25%]">
+            <iframe
+              class="absolute top-0 left-0 w-full h-full"
+              src="https://www.youtube.com/embed/IcPYtZ-Keh8"
+              frameborder="0"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+      </section>
+
+      <section class="mt-[100px] bg-[#eae6e2]">
+        <div
+          class="my-8 md:h-[50vh] md:min-h-[28rem] flex flex-col md:flex-row md:justify-end items-start bg-cream overflow-hidden relative"
+        >
+          <!-- Text block -->
+          <div class="flex justify-center w-full md:w-1/3">
+            <div
+              class="w-full bg-white p-8 pb-4 m-10 md:w-[27rem] overflow-hidden"
+            >
+              <h3
+                class="text-2xl md:text-2xl xl:text-3xl 2xl:text-4xl font-brightons font-semibold mb-4"
+              >
+                Engagement Ceremony
+              </h3>
+              <div
+                id="textContent"
+                class="my-4 2xl:my-6 overflow-hidden pr-2 max-h-[18rem] md:max-h-[16rem] md:h-[16rem] 2xl:max-h-[20rem] 2xl:h-[20rem] transition-all duration-500 ease-in-out"
+              >
+                <p class="text-base leading-relaxed text-gray-700">
+                  2/8/2025 <br />3/8/2025
+                </p>
+              </div>
+              <!-- Read More Button -->
+              <!-- <button
+              id="readMoreBtn"
+              class="md:absolute h-12 bottom-0 left-0 w-full bg-white text-sm text-gray-600 font-medium py-2"
+            >
+              Read more
+            </button> -->
+            </div>
+          </div>
+
+          <!-- Image block -->
+          <div class="w-full md:w-2/3 h-full overflow-hidden">
+            <img
+              loading="lazy"
+              src="assets/img/MIN07935.jpg"
+              alt="Pre-wedding photo"
+              class="w-full h-full object-cover transition-transform duration-500 ease-in-out hover:scale-150"
+            />
+          </div>
+        </div>
+      </section>
+      <section
+        class="gallery flex justify-center"
+        aria-label="pre-wedding-trocadero"
+      >
+        <div class="flex max-w-screen-lg w-full p-4">
+          <div class="relative w-full pb-[56.25%]">
+            <iframe
+              class="absolute top-0 left-0 w-full h-full"
+              src="https://www.youtube.com/embed/UnRQV6H3HDw"
               frameborder="0"
               allowfullscreen
             ></iframe>
